# good-listener

./: .gitignore  AUDIO_SETUP.md  Makefile  README.md
backend/: .gitignore  Makefile  requirements.txt
backend/app/: __init__.py  main.py  schemas.py
backend/app/core/: __init__.py  logging.py  schemas.py
backend/app/routers/: __init__.py  api.py
backend/app/services/: __init__.py  analysis.py  audio.py  capture.py  llm.py  memory.py  monitor.py  ocr.py  prompts.py
backend/config/: schema.json
backend/data/: .gitignore
backend/data/chroma_db/: .gitignore  chroma.sqlite3
backend/inference/: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/inference/app/: __init__.py  grpc_server.py
backend/inference/app/core/: __init__.py  config.py  errors.py  logging.py  trace.py
backend/inference/app/pb/: __init__.py
backend/inference/app/services/: __init__.py  constants.py  health.py  llm.py  memory.py  ocr.py  transcription.py  vad.py
backend/inference/app/services/audio/: __init__.py  diarization.py  speaker_detection.py  transcription.py  vad.py
backend/inference/app/services/health/: __init__.py  service.py
backend/inference/app/services/llm/: __init__.py  prompts.py  service.py
backend/inference/app/services/memory/: __init__.py  chunker.py  service.py
backend/inference/app/services/ocr/: __init__.py  service.py
backend/inference/tests/: __init__.py  conftest.py  test_chunker.py  test_config.py  test_diarization.py  test_health.py  test_llm.py  test_memory.py  test_ocr.py  test_prompts.py  test_speaker_detection.py  test_trace.py  test_transcription.py
backend/platform/: .editorconfig  .gitattributes  .gitignore  .golangci.yml  go.mod  go.sum  lefthook.yml
backend/platform/cmd/server/: main.go
backend/platform/internal/audio/: capture.go  capture_test.go
backend/platform/internal/config/: config.go  config_test.go
backend/platform/internal/errors/: errors.go
backend/platform/internal/grpcclient/: client.go  client_test.go  constants.go
backend/platform/internal/orchestrator/: constants.go  manager.go  orchestrator.go  orchestrator_test.go
backend/platform/internal/orchestrator/audio/: constants.go  processor.go  processor_test.go
backend/platform/internal/orchestrator/autoanswer/: detector.go  detector_test.go
backend/platform/internal/orchestrator/memory/: batcher.go  batcher_test.go  constants.go
backend/platform/internal/orchestrator/screen/: constants.go  processor.go  processor_test.go
backend/platform/internal/orchestrator/transcript/: store.go  store_test.go
backend/platform/internal/resilience/: breaker.go  breaker_test.go  config.go  retry.go  retry_test.go
backend/platform/internal/screen/: capture.go  capture_darwin.go  capture_linux.go  capture_test.go  capture_windows.go  capturer.go
backend/platform/internal/server/: constants.go  server.go  server_test.go
backend/platform/internal/syncx/: guard.go  guard_test.go
backend/platform/internal/trace/: grpc.go  http.go  trace.go  trace_test.go
backend/platform/pkg/pb/: cognition.pb.go  cognition_grpc.pb.go  cognition_test.go
backend/proto/: cognition.proto
backend/scripts/: debug_audio.py
backend/tests/: README.md  conftest.py  e2e_test.go  go.mod  go.sum  test_api.py  test_audio.py  test_capture.py  test_llm.py  test_memory.py  test_monitor.py  test_multimodal.py  test_ocr.py  test_prompts.py  test_proto_compat.py  test_schemas.py
frontend/: .gitignore  .prettierignore  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/dist-electron/: main.js  preload.js
frontend/electron/: main.ts  preload.ts  tsconfig.json
frontend/electron/main/: index.ts  tray.ts  window.ts
frontend/electron/main/ipc/: index.ts  settings.ts
frontend/electron/main/ipc/handlers/: window.ts
frontend/electron/preload/: index.ts
frontend/electron/shared/: ipc.ts  settings.ts
frontend/src/: App.tsx  electron.d.ts  env.d.ts  index.css  trace.ts  types.ts
frontend/src/components/: LiveTranscript.css  LiveTranscript.tsx  MicButton.tsx  Presence.tsx  SettingsModal.tsx  Sidebar.tsx  Stoplight.tsx  VoiceActivityIndicator.tsx
frontend/src/hooks/: useAutoScroll.ts  useChatConnection.ts  useDebounce.ts  useGsapPresence.ts  useVirtualList.ts
frontend/src/lib/: animations.ts
frontend/src/store/: useChatStore.ts  useUIStore.ts
scripts/: kill_port.sh  setup.sh
