[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "good-listener-inference"
version = "0.1.0"
description = "ML inference services for Good Listener"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Good Listener Team" }]
keywords = ["ml", "inference", "grpc", "transcription", "ocr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-health-checking>=1.60.0",
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.26.0,<2.0.0",
    "rapidocr-onnxruntime>=1.3.0",
    "Pillow>=10.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "google-generativeai>=0.3.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "types-Pillow>=10.2.0",
    "types-protobuf>=5.0.0",
]

[project.scripts]
inference-server = "app.grpc_server:main"

# =============================================================================
# Ruff - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "app/pb/*_pb2*.py",  # Generated protobuf files
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # ruff-specific
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "TRY",    # tryceratops
    "ASYNC",  # flake8-async
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "TRY003",   # Long exception messages
    "TRY300",   # Consider moving return to else block (stylistic)
    "E501",     # Line too long (handled by formatter)
    "G004",     # f-string in logging (acceptable in this codebase)
]
unfixable = ["ERA"]  # Don't auto-delete commented code

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "S101", "PLC0415", "SIM117", "TRY002", "F841", "RUF059"]  # Test-specific exceptions
"app/pb/*" = ["ALL"]  # Ignore generated files
"app/core/logging.py" = ["PLC0415", "PLW0603"]  # Allow lazy import for circular dep avoidance
"app/core/trace.py" = ["PLC0415"]  # Allow lazy import for asyncio check
"app/grpc_server.py" = ["E402"]  # load_dotenv must run before app imports
"app/services/llm.py" = ["PLC0415"]  # Lazy imports for optional providers

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# Mypy - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true
exclude = ["venv", "app/pb"]

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "grpc_health.*",
    "faster_whisper.*",
    "torch.*",
    "torchaudio.*",
    "rapidocr_onnxruntime.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_google_genai.*",
    "langchain_ollama.*",
    "chromadb.*",
    "sentence_transformers.*",
    "app.pb.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest - Testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/pb/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 60
show_missing = true
skip_covered = true

# =============================================================================
# Bandit - Security Linting
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "venv", "app/pb"]
skips = ["B101"]  # Skip assert warnings (used in tests)
